# scGPT

./: .dockerignore  AGENTS.md  CLAUDE-AUTO-WORKFLOWS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-issue-labeling.yml  auto-issue-suggestions.yml
docs/: requirements.txt
scgpt/model/: generation_model.py  model.py  multiomic_model.py
scgpt/tokenizer/: gene_tokenizer.py
