[project]
name = "scGPT"
version = "0.2.4"
description = "Large-scale generative pretrain of single cell using transformer."
license = {text = "MIT"}
authors = [{name = "Haotian", email = "subercui@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7.12"
keywords = ["single-cell", "genomics", "transformer", "AI", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=1.3.5",
    "scvi-tools>=0.16.0,<1.0",
    "scanpy>=1.9.1,<2.0",
    "torch>=1.13.0",
    "torchtext",
    "numba>=0.55.1",
    "scikit-misc>=0.1.4",
    "umap-learn>=0.5.3",
    "leidenalg>=0.8.10",
    "datasets>=2.3.0,<3.0",
    "typing-extensions>=4.2.0",
    "scib>=1.0.3,<2.0",
    "cell-gears<0.0.3",
    "orbax<0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
    "black>=22.3.0",
    "tensorflow>=2.8.0",
    "flash-attn>=1.0.1,<1.0.5",
    "torch-geometric>=2.3.0",
    "dcor~=0.5.3",
    "wandb>=0.12.3",
    "plotly>=5.3.1",
]

[project.urls]
Homepage = "https://github.com/bowang-lab/scGPT"
Repository = "https://github.com/bowang-lab/scGPT"
Documentation = "https://scgpt.readthedocs.io/"
"Bug Reports" = "https://github.com/bowang-lab/scGPT/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=5.2",
    "black>=22.3.0",
    "tensorflow>=2.8.0",
    "flash-attn>=1.0.1,<1.0.5",
    "torch-geometric>=2.3.0",
    "dcor~=0.5.3",
    "wandb>=0.12.3",
    "plotly>=5.3.1",
]
